all movies page

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
+
+    <div id="header-placeholder"></div>
     <h1>Movie List</h1>
     <div id="movies" class="movie-list"></div>
+
+    <div id="footer-placeholder"></div>
 
     <script type="module" src="./js/main.js"></script>
 </body>
