--- a/src/detail/details.html
+++ b/src/detail/details.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+    <div id="header-placeholder"></div>
     <div id="movie-details"></div>
+    <div id="footer-placeholder"></div>
     <script type="module" src="../js/details.js"></script>
 </body>
 
