--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <div id="header-placeholder"></div>
     <h1>Movie List</h1>
     <div id="movies" class="movie-list"></div>
+    <a href="all/all.html" class="see-all-btn">See All Movies →</a>
 
     <div id="footer-placeholder"></div>
 
