--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,14 @@
 <body>
 
     <div id="header-placeholder"></div>
-    <h1>Movie List</h1>
+
+    <section class="hero">
+        <h1>🎬 Welcome to MovieZone</h1>
+        <p>Watch the best movies narrated by your favorite VJs</p>
+        <div id="vj-list" class="vj-buttons"></div>
+    </section>
+
+    <h2>Latest</h2>
     <div id="movies" class="movie-list"></div>
     <a href="all/all.html" class="see-all-btn">See All Movies →</a>
 
