--- a/src/vj/vj.html
+++ b/src/vj/vj.html
@@ -18,7 +18,7 @@
     <div id="footer-placeholder"></div>
 
 
-    <script src="../js/vj.js"></script>
+    <script type="module" src="../js/vj.js"></script>
 </body>
 
 </html>
