--- a/src/clear/clear.html
+++ b/src/clear/clear.html
@@ -17,6 +17,9 @@
     <h1>Popular Movies</h1>
     <div id="movies" class="movies-grid"></div>
 
+    <h1>Trending Movies</h1>
+    <div id="trending" class="movies-grid"></div>
+
     <div id="footer-placeholder"></div>
     <script type="module" src="../js/clear.js"></script>
 
