--- a/src/login/login.html
+++ b/src/login/login.html
@@ -19,7 +19,7 @@
             <input type="password" id="password" placeholder="Password" required />
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="/register.html">Register</a></p>
+        <p>Don't have an account? <a href="login/register.html">Register</a></p>
     </main>
 
     <div id="footer-placeholder"></div>
