--- a/src/login/register.html
+++ b/src/login/register.html
@@ -20,7 +20,7 @@
             <input type="password" id="password" placeholder="Password" required />
             <button type="submit">Register</button>
         </form>
-        <p>Already have an account? <a href="/login.html">Login</a></p>
+        <p>Already have an account? <a href="/login/login.html">Login</a></p>
     </main>
 
     <div id="footer-placeholder"></div>
