--- a/src/login/login.html
+++ b/src/login/login.html
@@ -13,13 +13,21 @@
     <div id="header-placeholder"></div>
 
     <main>
-        <h1>Login</h1>
-        <form id="loginForm">
-            <input type="email" id="email" placeholder="Email" required />
-            <input type="password" id="password" placeholder="Password" required />
-            <button type="submit">Login</button>
-        </form>
-        <p>Don't have an account? <a href="/login/register.html">Register</a></p>
+        <div class="form-container">
+            <h2>Login</h2>
+            <form id="loginForm">
+                <label>Email</label>
+                <input type="email" id="email" required />
+
+                <label>Password</label>
+                <input type="password" id="password" required />
+
+                <button type="submit">Login</button>
+                <p>Don’t have an account? <a href="/login/register.html">Register</a></p>
+            </form>
+
+            <p id="errorMsg" style="color: red;"></p>
+        </div>
     </main>
 
     <div id="footer-placeholder"></div>
