--- a/src/login/login.html
+++ b/src/login/login.html
@@ -12,27 +12,24 @@
 <body>
     <div id="header-placeholder"></div>
 
-    <main>
-        <div class="form-container">
-            <h2>Login</h2>
-            <form id="loginForm">
-                <label>Email</label>
-                <input type="email" id="email" required />
+    <div class="form-container">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required autocomplete="email" />
 
-                <label>Password</label>
-                <input type="password" id="password" required />
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required autocomplete="current-password" />
 
-                <button type="submit">Login</button>
-                <p>Don’t have an account? <a href="/login/register.html">Register</a></p>
-            </form>
+            <button type="submit">Login</button>
+            <p>Don’t have an account? <a href="/login/register.html">Register</a></p>
+        </form>
 
-            <p id="errorMsg" style="color: red;"></p>
-        </div>
-    </main>
+        <p id="errorMsg" style="color: red;"></p>
 
-    <div id="footer-placeholder"></div>
+        <div id="footer-placeholder"></div>
 
-    <script type="module" src="../js/login.js></script>
+        <script type="module" src="../js/login.js></script>
 </body>
 
 </html>
