--- a/src/login/login.html
+++ b/src/login/login.html
@@ -29,7 +29,7 @@
 
         <div id="footer-placeholder"></div>
 
-        <script type="module" src="../js/login.js></script>
+        <script type="module" src="../js/login.js"></script>
 </body>
 
 </html>
